@@ -36,16 +36,6 @@ $ clisp script.lisp
 works fine.
 
 
-Readline interface problem:
-[2]> (macroexü
-*** - AREF: Index 9 für "(macroexü" ist zu groß.
-this appears to be a readline bug:
-Breakpoint 15, lisp_completion_matches (text=0x822c1d8 "macroexü", start=1,
-    end=10) at stream.d:9309
-(gdb) p strlen(text)
-$1 = 9
-
-
 Many pretty-printer ansi test failures.
 (sds - but bruno has to fix the risky-test in iofkts.tst first)
 
